--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -3,17 +3,19 @@ title: "R Assignment 1"
 author: "Merrick Howarth"
 date: "Sept. 28 2021"
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r libraries, include = F}
 library(tidyverse)
-library(plotly)
-library(sf)
-library(tigris)
-library(leaflet)
-library(censusapi)
+#library(plotly)
+#library(sf)
+#library(tigris)
+#library(leaflet)
+#library(censusapi)
 
-Sys.setenv(CENSUS_KEY="c8aa67e4086b4b5ce3a8717f59faa9a28f611dab")
+#Sys.setenv(CENSUS_KEY="c8aa67e4086b4b5ce3a8717f59faa9a28f611dab")
 
 ```
 
@@ -21,13 +23,56 @@ Sys.setenv(CENSUS_KEY="c8aa67e4086b4b5ce3a8717f59faa9a28f611dab")
 ```{r data}
 # reading in saved csv files for gas and electric from 2017 - now
 
-year <- 2017:2020
+years <- 2017:2021
 quarters <- 1:4
-type <- c("Electric", "Gas")
+types <- c("Electric", "Gas")
 
-pge_elec_gas<-Null
+pge_elec <- NULL
+
+for (year in years) {
+  for (quarter in quarters) {
+    filename <- 
+      paste0("pge/PGE_",year,"_Q",quarter, "_", type, "UsageByZip.csv")
+    
+    print(filename)
+    
+    temp <- read_csv(filename)
+    
+    
+    
+    pge_elec<- rbind(pge_elec,temp)
+    
+    saveRDS(pge_elec, "pge_elec_gas.rds")
+    
+  }
+}
+
+pge_elec$TOTALKWH = pge_elec$TOTALKWH * 3412.14  # Convert to BTU
+names(pge_elec)[names(pge_elec) == 'TOTALKWH'] <- 'TOTALBKU'
+pge_elec$TOTALKWH = pge_elec$AVERAGEKWH * 3412.14  # Convert to BTU
+
+type <- "Gas"
+pge_gas <- NULL
+
+for (year in years) {
+  for (quarter in quarters) {
+    filename <- 
+      paste0("pge/PGE_",year,"_Q",quarter, "_", type, "UsageByZip.csv")
+    
+    print(filename)
+    
+    temp <- read_csv(filename)
+    
+    pge_gas <- rbind(pge_gas,temp)
+    
+    saveRDS(pge_gas, "pge_gas.rds")
+    
+  }
+}
 
 
+pge_gas$TOTALTHM = pge_gas$TOTALTHM * 99976.1  # Convert to BTU
+pge_gas$TOTALTHM = pge_gas$AVERAGETHM * 99976.1  # Convert to BTU
 
 
 ```
